added Astro Calculator

--- a/app/partials/main.state1.html
+++ b/app/partials/main.state1.html
@@ -1,4 +1,4 @@
-<div id="ToDoList" class="col-md-6 col-md-offset-3 container-fluid">
+<div id="StateContainer" class="col-md-6 col-md-offset-3 container-fluid">
     <div ng-show="vm.edit" class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">Enter ToDo Item and Select Priority</h3>
