added comments to code

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -2,10 +2,10 @@
     <div class="btn-group" role="group" aria-label="...">
         <button ui-sref-active="active" ui-sref="main.state1" type="button" class="btn btn-default">ToDo</button>
         <button ui-sref-active="active" ui-sref="main.state2" type="button" class="btn btn-default">AstroWeight</button>
-        <button ui-sref="main.state3" type="button" class="btn btn-default">Mortgage Calculator</button>
-        <button ui-sref="main.state4" type="button" class="btn btn-default">Change Calculator</button>
-        <button ui-sref="main.state5" type="button" class="btn btn-default">Memory Game</button>
-        <button ui-sref="main.state6" type="button" class="btn btn-default">Weather App</button>
+        <button ui-sref-active="active" ui-sref="main.state3" type="button" class="btn btn-default">Mortgage Calculator</button>
+        <button ui-sref-active="active" ui-sref="main.state4" type="button" class="btn btn-default">Change Calculator</button>
+        <button ui-sref-active="active" ui-sref="main.state5" type="button" class="btn btn-default">Memory Game</button>
+        <button ui-sref-active="active" ui-sref="main.state6" type="button" class="btn btn-default">Weather App</button>
     </div>
 </div>
 <div ui-view></div>
