added Mortgage calc, weather app, change calc, and part of Memory Game

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,6 +1,7 @@
+<!-- Eeach simple application is in a different state, linked here with ui-sref -->
 <div id="buttonBar">
     <div class="btn-group" role="group" aria-label="...">
-        <button ui-sref-active="active" ui-sref="main.state1" type="button" class="btn btn-default">ToDo</button>
+        <button ui-sref-active="active" ui-sref="main.state1" type="button" class="btn btn-default">ToDo List</button>
         <button ui-sref-active="active" ui-sref="main.state2" type="button" class="btn btn-default">AstroWeight</button>
         <button ui-sref-active="active" ui-sref="main.state3" type="button" class="btn btn-default">Mortgage Calculator</button>
         <button ui-sref-active="active" ui-sref="main.state4" type="button" class="btn btn-default">Change Calculator</button>
