--- a/app/partials/main.state5.html
+++ b/app/partials/main.state5.html
@@ -1,12 +1,16 @@
 <!--Container holding all elements of this state-->
 <div id="StateContainer" class="col-md-6 col-md-offset-3 container-fluid">
-    <div class="panel panel-default">
+    <div id="mainPanel" class="panel panel-primary">
         <div class="panel-heading">
             <h1>Memory Game</h1>
+            <h2>Pick Two</h2>
         </div>
         <div class="panel-body">
-            <h3>coming soon</h3>
-
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-2" ng-repeat="card in vm.cards" ><img height=100 width=100 src="app/images/{{card.value}}"></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
