--- a/app/partials/main.state6.html
+++ b/app/partials/main.state6.html
@@ -1,12 +1,80 @@
 <!--Container holding all elements of this state-->
-<div id="StateContainer" class="col-md-6 col-md-offset-3 container-fluid">
+<div id="StateContainer" class="col-md-8 col-md-offset-2 container-fluid">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h1>Weather App</h1>
+            <h2>Weather App</h2>
         </div>
         <div class="panel-body">
-            <h3>coming soon</h3>
-
+            <div class="container-fluid">
+                <div class="container">
+                    <p>Always know if you need an umbrella</p>
+                </div>
+                <div class="btn-group" role="group" aria-label="...">
+                    <button type="button" class="btn btn-primary" ng-click="vm.newWeather('sandiego')">San Diego</button>
+                    <button type="button" class="btn btn-primary" ng-click="vm.newWeather('newyork')">New York</button>
+                    <button type="button" class="btn btn-primary" ng-click="vm.newWeather('washingtondc')">Washington D.C.</button>
+                    <button type="button" class="btn btn-primary" ng-click="vm.newWeather('london')">London</button>
+                    <button type="button" class="btn btn-primary" ng-click="vm.newWeather('tokyo')">Tokyo</button>
+                </div>
+                <div class="input-group">
+                    <input type="text" class="form-control" ng-model="vm.cityName" placeholder="Search for...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="button" ng-click="vm.format()">Go!</button>
+                      </span>
+                </div>
+                <div id="leftContain" class="col-md-6">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">City Information</h3>
+                        </div>
+                        <div class="panel-body text-center">
+                            <div class="row">
+                                <div class="col-md-12 cityDisplay">
+                                    <h2><img src="http://openweathermap.org/img/w/{{vm.weather.weather[0].icon}}.png" alt="{{vm.weather.weather[0].description}}">{{vm.weather.name}}</h2></div>
+                                <div class="col-md-12 latDisplay">Lat/Long: {{vm.weather.coord.lat}}, {{vm.weather.coord.lon}}</div>
+                            </div>
+                            <hr>
+                            <div class="row bottom titles">
+                                <div class="col-md-4">Temperature (°F)</div>
+                                <div class="col-md-4">Pressure</div>
+                                <div class="col-md-4">Humidity</div>
+                            </div>
+                            <div class="row bottom datas">
+                                <div class="col-md-4">{{vm.weather.main.temp}}°F</div>
+                                <div class="col-md-4">{{vm.weather.main.pressure}}</div>
+                                <div class="col-md-4">{{vm.weather.main.humidity}}%</div>
+                            </div>
+                            <div class="row bottom titles titles2">
+                                <div class="col-md-4">Lowest Temp (°F)</div>
+                                <div class="col-md-4">Highest Temp (°F)</div>
+                                <div class="col-md-4">Wind Speed</div>
+                            </div>
+                            <div class="row bottom datas">
+                                <div class="col-md-4">{{vm.weather.main.temp_min}}°F</div>
+                                <div class="col-md-4">{{vm.weather.main.temp_max}}°F</div>
+                                <div class="col-md-4">{{vm.weather.wind.speed}}MPH</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="rightContain" class="col-md-6">
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Search History</h3>
+                        </div>
+                        <div class="panel-body">
+                            <table class="table table-hover table-striped">
+                                <tbody>
+                                    <tr ng-repeat="history in vm.histories">
+                                        <td class="col-md-6">{{history.name}}</td>
+                                        <td class="col-md-6">{{history.time}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
