--- a/app/style/style.css
+++ b/app/style/style.css
@@ -1,3 +1,11 @@
+/***************************
+index.html
+****************************/
+.page-header {
+	padding: 1%;
+	margin-bottom: 0;
+}
+
 .blueBackground {
 	background-color: blue;
 }
@@ -10,38 +18,43 @@
 	background-color: green;
 }
 
+#backgroundColorButtons {
+	float:right;
+}
+
 h1 {
 	clear:both;
 	display: inline-block;
 }
 
-#backgroundColorButtons {
-	float:right;
+
+
+/***************************
+Main State
+****************************/
+#buttonBar {
+
 }
 
-.page-header {
-	padding: 1%;
-	margin-bottom: 0;
+
+
+/***************************
+All States share this main container style
+****************************/
+#StateContainer {
+	margin-top: 5%;
 }
 
-#ToDoListTitle {
-	font-size: 2em;
-}
 
+
+/***************************
+State 1
+****************************/
 #deleteButton {
 	float: right;
 	border-style: none;
 	color: red;
 	font-weight: bold;
-}
-
-#StateContainer {
-	margin-top: 5%;
-}
-
-#buttonBar {
-	padding: 0;
-	margin: 0 0 0 2%;
 }
 
 nav ul {
@@ -55,3 +68,97 @@ nav ul {
 .strike {
     text-decoration: line-through;
 }
+
+
+
+/***************************
+State 2
+****************************/
+
+
+/***************************
+State 3
+****************************/
+
+
+/***************************
+State 4
+****************************/
+#calculateChange {
+	float:right;
+}
+
+#dollarTag {
+	text-align: center;
+}
+
+#changeTags {
+	display: inline;
+}
+
+
+
+/***************************
+State 5
+****************************/
+
+
+
+/***************************
+State 6
+****************************/
+#jumbo {
+  margin-top: 5%;
+}
+
+#leftContain,
+#rightContain {
+  margin-top: 2%;
+}
+
+#leftContain {
+  padding-left: 0;
+}
+
+#rightContain {
+  padding-right: 0;
+}
+
+
+.top {
+  padding-top: 15px;
+  padding-bottom: 0px;
+}
+
+.titles {
+  font-weight: 900;
+}
+
+.datas {
+  font-weight: 900;
+  color: #316E32;
+  font-size: 1.25em;
+}
+
+.titles2 {
+  font-weight: 900;
+  padding-top: 50px;
+}
+
+.cityDisplay,
+{
+  font-weight: 900;
+}
+
+.latDisplay {
+  font-weight: 700;
+}
+
+
+
+
+
+
+
+
+
