ToDo List, Astro Calc, Mortgage Calc, Change Calc, Memory Game, Weather App, Movie Finder all functioning, next starting unit testing

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -7,6 +7,7 @@
         <button ui-sref-active="active" ui-sref="main.state4" type="button" class="btn btn-default">Change Calculator</button>
         <button ui-sref-active="active" ui-sref="main.state5" type="button" class="btn btn-default">Memory Game</button>
         <button ui-sref-active="active" ui-sref="main.state6" type="button" class="btn btn-default">Weather App</button>
+        <button ui-sref-active="active" ui-sref="main.state7" type="button" class="btn btn-default">Movie Finder</button>
     </div>
 </div>
 <div ui-view></div>
