--- a/app/partials/main.state5.html
+++ b/app/partials/main.state5.html
@@ -1,14 +1,17 @@
 <!--Container holding all elements of this state-->
 <div id="StateContainer" class="col-md-6 col-md-offset-3 container-fluid">
-    <div id="mainPanel" class="panel panel-primary">
+    <div id="mainPanel" class="panel panel-default">
         <div class="panel-heading">
-            <h1>Memory Game</h1>
-            <h2>Pick Two</h2>
+            <h2>Memory Game</h2>
+            <h4>Pick Two</h4>
         </div>
         <div class="panel-body">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-xs-2" ng-repeat="card in vm.cards" ><img height=100 width=100 src="app/images/{{card.value}}"></div>
+                    <div class="col-xs-2" ng-repeat="card in vm.cards">
+                        <div ng-click="vm.initialClick()" ng-show="card.cardIsFlipped"><img height=100 width=100 src="app/images/{{card.value}}"></div>
+                        <div ng-click="vm.initialClick(card)" ng-hide="card.cardIsFlipped"><img height=100 width=100 src="app/images/card.jpg"></div>
+                    </div>
                 </div>
             </div>
         </div>
