--- a/app/partials/main.state3.html
+++ b/app/partials/main.state3.html
@@ -13,11 +13,12 @@
             <h5>Loan term (years):</h5>
             <input ng-model="vm.loanTerm" type="text" class="form-control"></input>
             <h5>Period: {{vm.periodName}}</h5>
-                <button ng-click="vm.period=12; vm.periodName='Monthly'" type="button" class="btn btn-default">Monthly</button>
-                <button ng-click="vm.period=6; vm.periodName='Bimonthly'" type="button" class="btn btn-default">Bimonthly</button>
+            <button ng-click="vm.period=12; vm.periodName='Monthly'" type="button" class="btn btn-default">Monthly</button>
+            <button ng-click="vm.period=6; vm.periodName='Bimonthly'" type="button" class="btn btn-default">Bimonthly</button>
             <button id="calculateChange" ng-click="vm.Calculate()" type="button" class="btn btn-default">Calculate</button>
             <br>
-            <div ng-show="vm.show"><h3>You're monthly payments will be: ${{vm.monthlyPaymentFinal}}</h3></div>
+            <div ng-show="vm.show">
+                <h3>You're monthly payments will be: ${{vm.monthlyPaymentFinal}}</h3></div>
         </div>
     </div>
 </div>
