--- a/app/partials/main.state7.html
+++ b/app/partials/main.state7.html
@@ -3,6 +3,7 @@
 <div ng-hide="vm.hide" id="StateContainer" class="col-md-8 col-md-offset-2 container-fluid">
     <div class="panel panel-default">
         <div class="panel-heading">
+            <h2>Movie Finder</h2>
         </div>
         <div class="panel-body">
             <div class="container-fluid">
@@ -35,4 +36,3 @@
         </div>
     </div>
 </div>
-
