--- a/app/partials/main.state1.html
+++ b/app/partials/main.state1.html
@@ -1,40 +1,35 @@
 <!-- Container to hold all elements of this State -->
-<div id="StateContainer" class="col-md-6 col-md-offset-3 container-fluid">
+<div id="StateContainer" class="col-xs-6 col-xs-offset-3 container-fluid">
+    <h2>ToDo List</h2>
     <!--Input form for new ToDo item, hidden until click addNew-->
-    <div ng-show="vm.edit" class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Enter ToDo Item and Select Priority</h3>
-        </div>
-        <div class="panel-body">
-            <div class="input-group">
-                <input ng-model="vm.ToDo.ToDoText" type="text" class="form-control">
-                <div class="input-group-btn">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Priority <span class="caret"></span></button>
-                    <ul class="dropdown-menu dropdown-menu-right">
-                        <!-- Call function to add ToDo item and pass Prioirity value -->
-                        <li><a ng-click="vm.add(3)">Low</a></li>
-                        <li><a ng-click="vm.add(2)">Normal</a></li>
-                        <li><a ng-click="vm.add(1)">High</a></li>
-                    </ul>
-                </div>
+    <div id="appMain" ng-show="vm.edit">
+            <h3>Enter ToDo Item and Select Priority</h3>
+        <div class="input-group">
+            <input ng-model="vm.ToDo.ToDoText" type="text" class="form-control">
+            <div class="input-group-btn">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Priority <span class="caret"></span></button>
+                <ul id="ToDoPriorityList" class="dropdown-menu dropdown-menu-right">
+                    <!-- Call function to add ToDo item and pass Prioirity value -->
+                    <li><a ng-click="vm.add(3)">Low</a></li>
+                    <li><a ng-click="vm.add(2)">Normal</a></li>
+                    <li><a ng-click="vm.add(1)">High</a></li>
+                </ul>
             </div>
         </div>
     </div>
     <!--Panel holding the toDo List, addnew button and orderBy buttons-->
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <div id="ToDoListTitle" class="panel-title">
-                <h2>ToDo List</h2></div>
-            <button class="btn btn-default" id="addNew" ng-click="vm.addNew()">+ Add New</button>
+    <div id="appMain">
+        <div>
+            <button ng-hide="vm.edit" class="btn btn-default" id="addNew" ng-click="vm.addNew()">+ Add New</button>
             <br>
             <br>
             <tr>
-                <button class="btn btn-default" ng-click="sortField='-Priority'">High to Low</button>
-                <button class="btn btn-default" ng-click="sortField='Priority'">Low to High</button>
+                <button class="btn btn-default" ng-click="sortField='Priority'">High to Low</button>
+                <button class="btn btn-default" ng-click="sortField='-Priority'">Low to High</button>
                 <button class="btn btn-default" ng-click="sortField='ToDoText'">Alphabetical</button>
             </tr>
         </div>
-        <div class="panel-body">
+        <div>
             <nav>
                 <ul class="list-group">
                     <li ng-class="{strike: deleted}" ng-repeat="Todo in vm.ToDoLocal | orderBy: sortField" class="list-group-item">
