--- a/app/partials/state8.html
+++ b/app/partials/state8.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a ui-sref="state8.main"><span class="glyphicon glyphicon-home"></span>Home</a></li>
-                <li><a href=""><span class="glyphicon glyphicon-flash"></span>Moments</a></li>
+                <li><a ui-sref="state8.todo"><span class="glyphicon glyphicon-flash"></span>To Do List</a></li>
                 <li><a href=""><span class="glyphicon glyphicon-bell"></span>Notifications</a></li>
                 <li><a href=""><span class="glyphicon glyphicon-envelope"></span>Messages</a></li>
             </ul>
