commented out the Chirper application page to prevent CORS error when pushing live

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,12 +1,14 @@
 <div id="funContainer" class="container-fluid">
-    <div id="pageHeader" class="container-fluid">
-        <div ui-sref="main" id="pageTitle">C-Mac</div>
+    <div ui-sref="main" id="pageHeader" class="container-fluid">
+        <h1>Christian McFarland</h1>
+        <h3>Origin Code Academy</h3>
+        <h4>San Diego, CA</h4>
     </div>
     <div class="col-xs-12" id="list">
-        <div ui-sref-active="active" ui-sref="main.state1" id="listImage">
+<!--         <div ui-sref-active="active" ui-sref="main.state1" id="listImage">
             <img width=75px height=75px src="app/images/todo.jpg">
             <p><span class="glyphicon glyphicon-tasks"></span></p>
-        </div>
+        </div> -->
         <div ui-sref-active="active" ui-sref="main.state2" id="listImage">
             <img width=75px height=75px src="app/images/astro.jpeg">
             <p><span class="glyphicon glyphicon-globe"></span></p>
@@ -31,7 +33,7 @@
             <img width=75px height=75px src="app/images/movie.jpg">
             <p><span class="glyphicon glyphicon-film"></span></p>
         </div>
-        <div ui-sref-active="active" ui-sref="state8" id="listImage">
+        <div ui-sref-active="active" ui-sref="login" id="listImage">
             <img width=75px height=75px src="app/images/chirp.jpg">
             <p><span class="glyphicon glyphicon-leaf"></span></p>
         </div>
