--- a/app/partials/register.html
+++ b/app/partials/register.html
@@ -1,5 +1,8 @@
 <div id="StateContainer" class="col-md-6 col-md-offset-3 container-fluid">
     <div id="appMain">
+        <a ui-sref="main">
+            <p>Back</p>
+        </a>
         <h2>Register Here</h2>
         <div class="input-group">
             <label for="">Display Name (no spaces)</label>
