--- a/app/partials/state8.todo.html
+++ b/app/partials/state8.todo.html
@@ -6,7 +6,7 @@
         <div class="input-group">
             <input ng-model="vm.ToDo.Text" type="text" class="form-control">
             <div class="input-group-btn">
-                <button type="button" class="btnf btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Priority <span class="caret"></span></button>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Priority <span class="caret"></span></button>
                 <ul id="ToDoPriorityList" class="dropdown-menu dropdown-menu-right">
                     <!-- Call function to add ToDo item and pass Prioirity value -->
                     <li><a ng-click="vm.addToDo(3)">Low</a></li>
