syncing master with live gh-pages

--- a/app/style/style.css
+++ b/app/style/style.css
@@ -49,7 +49,7 @@ index.html
 }
 
 body {
-    background-image: url("app/images/sunset.jpeg");
+    background-image: url("../images/sunset.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
 }
