showcasing Chirper without SQL backend

--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -12,7 +12,7 @@
         </div>
         <div class="clearfix">
             <a ui-sref="register" class="btn btn-default">Register</a>
-            <button class="btn btn-primary pull-right" ng-click="login.login()">Login</button>
+            <button class="btn btn-primary pull-right" ui-sref="state8">Login</button>
         </div>
     </div>
 </div>
