removed broken memory game, made it easier to view Chirper

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -22,10 +22,10 @@
             <img width=75px height=75px src="app/images/change.jpg">
             <p><span class="glyphicon glyphicon-usd"></span></p>
         </div>
-        <div ui-sref-active="active" ui-sref="main.state5" id="listImage">
+<!--         <div ui-sref-active="active" ui-sref="main.state5" id="listImage">
             <img width=75px height=75px src="app/images/memory.jpg">
             <p><span class="glyphicon glyphicon-th"></span></p>
-        </div>
+        </div> -->
         <div ui-sref-active="active" ui-sref="main.state6" id="listImage">
             <img width=75px height=75px src="app/images/weather.jpg">
             <p><span class="glyphicon glyphicon-cloud"></span></p>
@@ -34,7 +34,7 @@
             <img width=75px height=75px src="app/images/movie.jpg">
             <p><span class="glyphicon glyphicon-film"></span></p>
         </div>
-        <div ui-sref-active="active" ui-sref="login" id="listImage">
+        <div ui-sref-active="active" ui-sref="state8.main" id="listImage">
             <img width=75px height=75px src="app/images/chirp.jpg">
             <p><span class="glyphicon glyphicon-leaf"></span></p>
         </div>
